# pyqt-liquidglass

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  ty.toml
.github/workflows/: publish.yml
docs/: api.rst  conf.py  core_concepts.rst  examples.rst  getting_started.rst  index.rst
examples/: __init__.py  custom_options.py  frameless.py  sidebar.py  traffic_lights.py  window_glass.py
