[project]
name = "pyqt-liquidglass"
version = "0.1.0"
description = "Simple library for PyQt to add macOS liquid glass effect"
readme = "README.md"
authors = [
    { name = "h", email = "h@kotikot.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-quartz>=12.1",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyside6-essentials>=6.10.1",
    "pyside6-stubs>=6.7.3.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "D1", "D203", "D212", "COM812", "RUF001", "RUF002", "RUF003"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"*.lock" = ["ALL"]
"docs/*" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
